--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
     <string name="app_name">Ava</string>
+    <string name="label_ok">OK</string>
+    <string name="label_cancel">Cancel</string>
+    <string name="label_settings">Settings</string>
     <string name="label_voice_satellite_name">Name</string>
     <string name="label_voice_satellite_port">Port</string>
     <string name="label_voice_satellite_wake_word">Wake word</string>
+    <string name="label_voice_satellite_play_wake_sound">Play wake sound</string>
+    <string name="description_voice_satellite_play_wake_sound">Play a sound when the satellite is woken by a wake word"</string>
 
     <string name="validation_voice_satellite_name_empty">Name cannot be empty</string>
     <string name="validation_voice_satellite_port_invalid">Port must be between 1 and 65535</string>
