--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="description_voice_satellite_play_wake_sound">Play a sound when the satellite is woken by a wake word"</string>
     <string name="label_custom_wake_words">Custom wake words</string>
     <string name="description_custom_wake_word_location">Specify the location of custom wake word models</string>
+    <string name="label_custom_timer_sound">Custom timer sound</string>
+    <string name="description_custom_timer_sound_location">Specify a different file to play</string>
+    <string name="label_timer_sound_repeat">Repeat timer sound</string>
+    <string name="description_timer_sound_repeat">If enabled, repeat the sound until you say "stop"</string>
 
     <string name="validation_voice_satellite_name_empty">Name cannot be empty</string>
     <string name="validation_voice_satellite_port_invalid">Port must be between 1 and 65535</string>
