--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,9 @@
     <string name="label_voice_satellite_first_wake_word">Wake word 1</string>
     <string name="label_voice_satellite_second_wake_word">Wake word 2</string>
     <string name="label_voice_satellite_enable_wake_sound">Enable wake sound</string>
-    <string name="description_voice_satellite_play_wake_sound">Play a sound when the satellite is woken by a wake word"</string>
+    <string name="description_voice_satellite_play_wake_sound">Play a sound when the satellite is woken by a wake word</string>
+    <string name="label_custom_wake_sound">Custom wake sound</string>
+    <string name="description_custom_wake_sound_location">Specify a different sound file to play when the satellite wakes</string>
     <string name="label_custom_wake_words">Custom wake words</string>
     <string name="description_custom_wake_word_location">Specify the location of custom wake word models</string>
     <string name="label_custom_timer_sound">Custom timer sound</string>
